<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/et_gwh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/biryani_extralight"
        android:text="@string/et_gwh"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:textColor="#d8b8c5"
        android:textSize="60dp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/et_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textAppearance="@android:style/TextAppearance.Holo"
        android:textColor="#d8b8c5"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_gwh"
        app:layout_constraintVertical_bias="0.937" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/et_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textAppearance="@android:style/TextAppearance.Holo"
        android:textColor="#d8b8c5"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="78dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#d8b8c5"
        android:elevation="0dp"
        android:text="@string/button_submit"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.284" />

</android.support.constraint.ConstraintLayout>