<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".controllers.WelcomeScreenActivity">

    <Button
        android:id="@+id/button_login"
        android:layout_width="78dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="243dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#d8b8c5"
        android:text="@string/button_login"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toBottomOf="@id/button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_search"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="78dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#d8b8c5"
        android:text="@string/button_signup"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <TextView
        android:id="@+id/et_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/biryani_extralight"
        android:text="@string/et_gwh"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:textColor="#d8b8c5"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

</RelativeLayout>