<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/biryani_extralight"
            android:text="@string/et_gwh"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="#d8b8c5"
            android:textSize="60dp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/et_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textAppearance="@android:style/TextAppearance.Holo"
            android:textColor="#d8b8c5"
            android:textSize="16dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/et_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textAppearance="@android:style/TextAppearance.Holo"
            android:textColor="#d8b8c5"
            android:textSize="16dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="139dp"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#d8b8c5"
            android:elevation="0dp"
            android:text="Create Account"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Holo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintVertical_bias="0.44" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="126dp"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#d8b8c5"
            android:elevation="0dp"
            android:text="Cancel"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Holo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintVertical_bias="0.446" />

        <EditText
            android:id="@+id/et_rep_pass"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="Confirm Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textAppearance="@android:style/TextAppearance.Holo"
            android:textColor="#d8b8c5"
            android:textSize="16dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.648"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_rep_pass" />

        <CheckBox
            android:id="@+id/checkbox_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/checkbox_show"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.332"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_rep_pass" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>